--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ ikiwiki (3.20180105-1) UNRELEASED; urgency=medium
     - d/source/format: set to 3.0 (quilt)
     - d/watch: Look for new releases in upstream git
   * New upstream release
+    - d/copyright: Drop stanzas for files no longer shipped
 
  -- Simon McVittie <smcv@debian.org>  Sat, 06 Jan 2018 15:14:29 +0000
 
