--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ ikiwiki (3.20180105-1) UNRELEASED; urgency=medium
     - d/copyright: Drop stanzas for files no longer shipped
   * Change rst plugin's interpreter from Python 2 to Python 3
   * Remove unused Lintian overrides for duplicate word false positives
+  * Declare compliance with Debian Policy 4.1.3
 
  -- Simon McVittie <smcv@debian.org>  Sat, 06 Jan 2018 15:14:29 +0000
 
