--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ ikiwiki (3.20180105-1) UNRELEASED; urgency=medium
   * Change rst plugin's interpreter from Python 2 to Python 3
   * Remove unused Lintian overrides for duplicate word false positives
   * Declare compliance with Debian Policy 4.1.3
+  * Use recommended debhelper compat level 11
 
  -- Simon McVittie <smcv@debian.org>  Sat, 06 Jan 2018 15:14:29 +0000
 
