--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (3.20180105-1) UNRELEASED; urgency=medium
+ikiwiki (3.20180105-1) unstable; urgency=medium
 
   * Switch to non-native packaging
     - d/control: Move packaging from upstream git to salsa.debian.org
@@ -13,7 +13,7 @@ ikiwiki (3.20180105-1) UNRELEASED; urgency=medium
   * Declare compliance with Debian Policy 4.1.3
   * Use recommended debhelper compat level 11
 
- -- Simon McVittie <smcv@debian.org>  Sat, 06 Jan 2018 15:14:29 +0000
+ -- Simon McVittie <smcv@debian.org>  Sat, 06 Jan 2018 23:20:11 +0000
 
 ikiwiki (3.20171001) unstable; urgency=medium
 
