--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ ikiwiki (3.20180228-1) UNRELEASED; urgency=medium
     - build: Ensure that pm_to_blib finishes before rewriting shebang lines
     - t: Make the img test pass with ImageMagick >= 6.9.8-3
       (Closes: #891647)
+  * Stop rewriting shebang lines of Python 3 scripts
 
  -- Simon McVittie <smcv@debian.org>  Wed, 28 Feb 2018 10:45:44 +0000
 
