--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ikiwiki (3.20180311-1) UNRELEASED; urgency=medium
+ikiwiki (3.20180311-1) unstable; urgency=medium
 
   * New upstream release
   * (Build-)Depend on libmarkdown2 (>= 2.2), and opt-in to the new test
     that assumes that version
 
- -- Simon McVittie <smcv@debian.org>  Sun, 11 Mar 2018 15:58:05 +0000
+ -- Simon McVittie <smcv@debian.org>  Sun, 11 Mar 2018 15:58:46 +0000
 
 ikiwiki (3.20180228-1) unstable; urgency=medium
 
