--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 ikiwiki (3.20180311-2) UNRELEASED; urgency=medium
 
+  [ Ondřej Nový ]
   * d/changelog: Remove trailing whitespaces
+
+  [ Jelmer Vernooĳ ]
+  * Allow Breezy as alternative to Bazaar.
 
  -- Ondřej Nový <onovy@debian.org>  Mon, 01 Oct 2018 10:37:53 +0200
 
